--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Character Design</title>
+		<title>Illustration and Storytelling</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,7 +22,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>CHARACTER DESIGN</h1>
+						<h1>ILLUSTRATION AND STORYTELLING</h1>
 						<p><a href="http://clevelandmosher.com/">C.T.M.</a></p>
 						<ul class="icons">
               <li><a href="http://store.steampowered.com/app/568370/" class="icon fa-steam" target="_blank"><span class="label">Twitter</span></a></li>
@@ -35,33 +35,33 @@
 					<section id="thumbnails">
 						<article>
 							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Castle Battles Character Splay</h2>
-							<p>This project was an absolute joy to work on.</p>
+							<h2>Sailor's End</h2>
+							<p>This piece started as a demo, but I liked the start so much that I decided to finish it.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>The Great Meatstachio</h2>
-							<p>Wielder of The Blue Mustache of Leadership. No foe can match his mighty rainbow hammer, The Legendary Tenderizer.</p>
+							<h2>With Friends</h2>
+							<p>Total sensory overload. I wanted to find out what "too much" was while working on this one.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
-							<h2>Miss Tashier</h2>
-							<p>Champion of Les Moustachiers. She wields the twin blades, The Maltez Falchions.</p>
+							<h2>Les Moustachiers</h2>
+							<p>Intro for Les Moustachier Campaign. #Castle Battles</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h2>Les Moustachier</h2>
-							<p>Fearsome warriors on a noble quest to reclaim their homeland from the Clearly Evil Empire. Their swords are carved from magic icicles.</p>
+							<h2>The Clearly Evil Empire</h2>
+							<p>Intro for The Clearly Evil Campaign. #Castle Battles</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img src="images/thumbs/05.jpg" alt="" /></a>
-							<h2>The Dark Lord Steriatipe</h2>
-							<p>All shall bow before his Fiery Trident of Fire! Mwahahahahahahahahah!</p>
+							<h2>The Purperilous</h2>
+							<p>Intro for The Purperilous Campaign. #Castle Battles</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>The Crapod</h2>
-							<p>The three-time blue ribbon champion of the Tri-Annual Cat Eating Contest. This anthropomorphic toad is far too fancy to fight his own battles.</p>
+							<h2>The Order of Awesome</h2>
+							<p>Intro for The Order of Awesome Campaign. #Castle Battles</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" /></a>
