--- a/index.html
+++ b/index.html
@@ -41,27 +41,27 @@
 						<article>
 							<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
 							<h2>With Friends</h2>
-							<p>Total sensory overload. I wanted to find out what "too much" was while working on this one.</p>
+							<p>Kick back, relax, and enjoy the sensory overload.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
 							<h2>Les Moustachiers</h2>
-							<p>Intro for Les Moustachier Campaign. #Castle Battles</p>
+							<p>Intro for Les Moustachier Campaign.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg" alt="" /></a>
 							<h2>The Clearly Evil Empire</h2>
-							<p>Intro for The Clearly Evil Campaign. #Castle Battles</p>
+							<p>Intro for The Clearly Evil Campaign.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img src="images/thumbs/05.jpg" alt="" /></a>
 							<h2>The Purperilous</h2>
-							<p>Intro for The Purperilous Campaign. #Castle Battles</p>
+							<p>Intro for The Purperilous Campaign.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" /></a>
 							<h2>The Order of Awesome</h2>
-							<p>Intro for The Order of Awesome Campaign. #Castle Battles</p>
+							<p>Intro for The Order of Awesome Campaign.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" /></a>
