--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>The Evil Chaps</h2>
-							<p>The personification of bureaucracy gone wrong. These little guys might burn your house down with their incendiary torch clubs, but only on standard business hours.</p>
+							<h2>All's Well That Ends</h2>
+							<p>Long Live The King.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg" alt="" /></a>
