--- a/index.html
+++ b/index.html
@@ -70,18 +70,18 @@
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg" alt="" /></a>
-							<h2>The Purple King</h2>
-							<p>0xFFFA0001 0x00FF1010 0x000PERIL 0x0AWAITS0 0x00YOU000 0xFFFA000F</p>
+							<h2>The Great Tapestry</h2>
+							<p>The banner image for Castle Battles.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" /></a>
-							<h2>Clamor</h2>
-							<p>"But the air was never sweet enough for us."</p>
+							<h2>Artwork for The Spoils Cardgame</h2>
+							<p>Gallows Humor. Etc.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" /></a>
-							<h2>The Purple Sages</h2>
-							<p>"All Threads shall fall into place."</p>
+							<h2>Electric Monk</h2>
+							<p>Just a fun piece.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg" alt="" /></a>
