--- a/index.html
+++ b/index.html
@@ -79,7 +79,12 @@
 							<p>Gallows Humor. Etc.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/11.jpg" alt="" /></a>
+							<h2>Swampland Concept Sketch</h2>
+							<p>A sci-fi game concept</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/fulls/Swampland Concept Sketch.jpg"><img src="images/thumbs/10.jpg" alt="" /></a>
 							<h2>Electric Monk</h2>
 							<p>A fun piece I worked up in my spare time.</p>
 						</article>
