--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							<p>Gallows Humor. Etc.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/Swampland Concept Sketch.jpg"><img src="images/thumbs/11.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg" alt="" /></a>
 							<h2>Swampland Concept Sketch</h2>
 							<p>A sci-fi game concept</p>
 						</article>
